[project]
name = "fluid-ai-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-mistralai>=1.1.6",
    "mistralai>=2.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
